# Multimodal-Deep-Fusion-in-Hyperbolic-Space

./: config.py  pyproject.toml  readme.org
src/brain/data/: __init__.py  data_old.py  dataset.py  graph.py  input.py  utils.py
src/brain/manifold/: __init__.py  base.py  euclidean.py  hyperboloid.py  poincare.py  utils.py
src/brain/manifolds/: poincare.py
src/brain/net/: __init__.py  bgcn.py  bhgcn.py  ll.py  utils.py
src/brain/optim/: __init__.py  radam.py  rsgd.py
src/brain/train/: __main__.py  base.py  bgcn.py  bhgcn.py  metric.py
src/brain/utils/: __init__.py  utils.py
